--- a/lingo-wechat/package.json
+++ b/lingo-wechat/package.json
@@ -8,40 +8,42 @@
 		"ambients"
 	],
 	"dependencies": {
+		"@lincode/react-global-state": "^1.1.10",
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
 		"@types/react": "^16.9.49",
 		"@types/react-dom": "^16.9.8",
 		"ambients-cli": "^2.2.42",
+		"axios": "^0.20.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-three-fiber": "^4.2.21"
 	},
 	"devDependencies": {
-		"typescript": "*",
-		"webpack": "4",
-		"webpack-cli": "3",
-		"html-webpack-plugin": "3",
-		"html-webpack-template": "6",
-		"webpack-dev-server": "3",
-		"@types/webpack-env": "*",
-		"file-loader": "*",
-		"ts-loader": "*",
-		"fork-ts-checker-notifier-webpack-plugin": "2",
-		"fork-ts-checker-webpack-plugin": "4",
-		"css-loader": "*",
-		"style-loader": "*",
-		"postcss-loader": "*",
-		"@fullhuman/postcss-purgecss": "*",
-		"autoprefixer": "*",
-		"tailwindcss": "*",
-		"content-loader": "*",
 		"@babel/cli": "7",
 		"@babel/core": "7",
 		"@babel/preset-env": "7",
 		"@babel/runtime": "7",
+		"@fullhuman/postcss-purgecss": "*",
+		"@types/webpack-env": "*",
+		"autoprefixer": "*",
+		"babel-loader": "8",
+		"content-loader": "*",
 		"core-js": "3",
-		"babel-loader": "8"
+		"css-loader": "*",
+		"file-loader": "*",
+		"fork-ts-checker-notifier-webpack-plugin": "2",
+		"fork-ts-checker-webpack-plugin": "4",
+		"html-webpack-plugin": "3",
+		"html-webpack-template": "6",
+		"postcss-loader": "*",
+		"style-loader": "*",
+		"tailwindcss": "*",
+		"ts-loader": "*",
+		"typescript": "*",
+		"webpack": "4",
+		"webpack-cli": "3",
+		"webpack-dev-server": "3"
 	},
 	"scripts": {
 		"build": "ambients clean && yarn webpack --mode production",
