--- a/lingo-landingPage/package.json
+++ b/lingo-landingPage/package.json
@@ -19,8 +19,10 @@
 		"react-dom": "^16.12.0",
 		"react-resize-detector": "^4.2.1",
 		"react-spring": "^8.0.27",
+		"react-three-fiber": "^4.2.21",
 		"shifty": "^2.8.3",
 		"tailwindcss": "^1.8.6",
+		"three": "^0.120.1",
 		"tossable": "^2.0.0",
 		"web-animations-js": "^2.3.2"
 	},
