--- a/lingo-landing-page/package.json
+++ b/lingo-landing-page/package.json
@@ -18,6 +18,7 @@
 		"react": "^16.12.0",
 		"react-device-detect": "^1.14.0",
 		"react-dom": "^16.12.0",
+		"react-localization": "^1.0.15",
 		"react-resize-detector": "^4.2.1",
 		"react-spring": "^8.0.27",
 		"react-three-fiber": "^4.2.21",
