--- a/lingo-wechat/package.json
+++ b/lingo-wechat/package.json
@@ -17,7 +17,8 @@
 		"axios": "^0.20.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
-		"react-three-fiber": "^4.2.21"
+		"react-three-fiber": "^4.2.21",
+		"three": "^0.122.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "7",
