--- a/lingo-racer/package.json
+++ b/lingo-racer/package.json
@@ -8,10 +8,14 @@
 		"ambients"
 	],
 	"dependencies": {
+		"@lincode/react-global-state": "^1.1.25",
 		"@lincode/utils": "^1.1.59",
-		"framer-motion": "^3.1.1",
 		"react": "^17.0.1",
-		"react-dom": "^17.0.1"
+		"react-dom": "^17.0.1",
+		"react-spring": "^8.0.27",
+		"react-three-fiber": "^5.3.10",
+		"react-with-gesture": "^4.0.8",
+		"three": "^0.123.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "7",
