--- a/lingo-racer/package.json
+++ b/lingo-racer/package.json
@@ -11,6 +11,7 @@
 		"@lincode/react-global-state": "^1.1.25",
 		"@lincode/utils": "^1.1.59",
 		"@react-three/postprocessing": "^1.5.0",
+		"drei": "^2.2.12",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-spring": "^8.0.27",
