--- a/lingo-racer/package.json
+++ b/lingo-racer/package.json
@@ -10,14 +10,19 @@
 	"dependencies": {
 		"@lincode/react-global-state": "^1.1.25",
 		"@lincode/utils": "^1.1.59",
+		"@material-ui/core": "^4.11.2",
+		"@material-ui/icons": "^4.11.2",
 		"@react-three/postprocessing": "^1.5.0",
 		"drei": "^2.2.12",
+		"prism-react-renderer": "^1.1.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
+		"react-gauge-chart": "^0.3.0",
 		"react-spring": "^8.0.27",
 		"react-three-fiber": "^5.3.10",
 		"react-with-gesture": "^4.0.8",
-		"three": "^0.123.0"
+		"three": "^0.123.0",
+		"ts-dedent": "^2.0.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "7",
