--- a/lingo-racer/package.json
+++ b/lingo-racer/package.json
@@ -14,6 +14,7 @@
 		"@material-ui/icons": "^4.11.2",
 		"@react-three/postprocessing": "^1.5.0",
 		"drei": "^2.2.12",
+		"pizzicato": "^0.6.4",
 		"prism-react-renderer": "^1.1.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
