--- a/lingo-camp/package.json
+++ b/lingo-camp/package.json
@@ -8,8 +8,12 @@
 		"ambients"
 	],
 	"dependencies": {
+		"@tailwindcss/typography": "^0.3.1",
 		"ambients-cli": "^2.2.58",
 		"antd": "^4.10.2",
+		"axios": "^0.21.1",
+		"codemirror": "^5.59.1",
+		"react-codemirror2": "^7.2.1",
 		"react-coding-keyboard": "^0.0.4",
 		"react-markdown": "^5.0.3",
 		"react-spring": "^8.0.27",
