--- a/lingo-keyboard/package.json
+++ b/lingo-keyboard/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "react-coding-keyboard",
-	"version": "0.0.7",
+	"version": "0.0.8",
 	"description": "A on-screen mobile keyboard for React, with easy access to symbols and operators used in programming languages",
 	"author": "shade233",
 	"license": "MIT",
@@ -11,7 +11,9 @@
 		"onscreen",
 		"keyboard"
 	],
-	"dependencies": {},
+	"dependencies": {
+		"react-spring": "^8.0.27"
+	},
 	"devDependencies": {
 		"@babel/cli": "7",
 		"@babel/core": "7",
