--- a/lingo-camp/package.json
+++ b/lingo-camp/package.json
@@ -18,6 +18,7 @@
 		"react-markdown": "^5.0.3",
 		"react-screens": "^1.0.9",
 		"react-spring": "^8.0.27",
+		"ts-dedent": "^2.0.0",
 		"valtio": "^0.6.0"
 	},
 	"peerDependencies": {},
