--- a/lingo-search/package.json
+++ b/lingo-search/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"@material-ui/core": "^4.11.3",
 		"@material-ui/icons": "^4.11.2",
+		"@pinyinma/playground-css": "^1.0.0",
 		"@pinyinma/playground-theme": "*",
 		"valtio": "^0.7.1"
 	},
